data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2414.wast
;; 4. **Test of Function Calling with Operand Stack Manipulation**:     - Implement a scenario where a function call manipulates the operand stack (e.g., by adding or removing values) right before a `br_table` instruction.    - *Constraint*: Ensure that the stack manipulations are correctly managed before the `br_table` is executed.    - *Relation to Improper Function Call or Return Handling*: This checks the consistency of the stack state through function calls followed by `br_table` instructions.

(assert_invalid
  (module
    (func $func_handle
      (block
        (call $dummy_function)
        (i32.const 0)
        (br_table 0)
      )
    )
    (func $dummy_function (param i32) (result i32)
      (i32.const 42)
      (i32.add)
    )
  )
  "type mismatch"
)